fixed search button on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -645,4 +645,5 @@ body, .master-container {
     margin-top: auto;
     margin-bottom: auto;
     vertical-align: middle;
+    height: 100%;
 }
